@@ -259,6 +259,7 @@ class FrontendForm(ModelForm):
                            'csc_domainmanager_apikey', 'csc_domainmanager_authorization',
                            'retarus_token', 'retarus_channel', 'vectra_host', 'vectra_client_id', 'vectra_secret_key',
                            'apex_server_host', 'apex_application_id', 'apex_api_key',
+                           'gatewatcher_alerts_host', 'gatewatcher_alerts_api_key',
                            ]:
             self.fields[field_name].required = False
 
@@ -362,6 +363,7 @@ class FrontendForm(ModelForm):
                   'csc_domainmanager_apikey', 'csc_domainmanager_authorization',
                   'retarus_token', 'retarus_channel', 'vectra_host', 'vectra_secret_key', 'vectra_client_id',
                   'apex_server_host', 'apex_application_id', 'apex_api_key',
+                  'gatewatcher_alerts_host', 'gatewatcher_alerts_api_key',
                 )
 
         widgets = {
@@ -545,6 +547,8 @@ class FrontendForm(ModelForm):
             'apex_server_host': TextInput(attrs={'class': 'form-control'}),
             'apex_api_key': TextInput(attrs={'class': 'form-control'}),
             'apex_application_id': TextInput(attrs={'class': 'form-control'}),
+            'gatewatcher_alerts_host': TextInput(attrs={'class': 'form-control'}),
+            'gatewatcher_alerts_api_key': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
         }
 
     def clean_name(self):
