@@ -1928,6 +1928,22 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12 api_clients_row" id="api_gatewatcher_alerts_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.gatewatcher_alerts_host.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.gatewatcher_alerts_host }}
+                            {{ form.gatewatcher_alerts_host.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.gatewatcher_alerts_api_key.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.gatewatcher_alerts_api_key }}
+                            {{ form.gatewatcher_alerts_api_key.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api-mode">
                         <div class="text-center mar-btm">
                           <button class="btn btn-warning" id="test_api_parser" type="button">
